--- a/BlazorApp1/Properties/launchSettings.json
+++ b/BlazorApp1/Properties/launchSettings.json
@@ -17,6 +17,7 @@
     },
     "BlazorApp1": {
       "commandName": "Project",
+      "hotReloadEnabled": false,
       "launchBrowser": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
